--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,30 @@
 {
-	"compilerOptions": {
-		"allowSyntheticDefaultImports": true,
-		"alwaysStrict": true,
-		"esModuleInterop": true,
-		"experimentalDecorators": true,
-		"forceConsistentCasingInFileNames": true,
-		"importHelpers": true,
-		"lib": ["esnext"],
-		"module": "commonjs",
-		"moduleResolution": "node",
-		"newLine": "lf",
-		"noEmitHelpers": true,
-		"noFallthroughCasesInSwitch": true,
-		"noImplicitReturns": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"outDir": "dist",
-		"preserveConstEnums": true,
-		"pretty": true,
-		"rootDir": "src",
-		"removeComments": false,
-		"resolveJsonModule": true,
-		"strict": true,
-		"target": "ES2016",
-		"useDefineForClassFields": true,
-		"skipLibCheck": true
-	},
-	"include": ["src/**/*"],
-	"exclude": ["node_modules/**/*"]
+    "compilerOptions": {
+        "strict": true,
+        "moduleResolution": "node",
+        "module": "commonjs",
+        "target": "es2019",
+        "lib": [
+            "ESNext"
+        ],
+        "declaration": true,
+        "sourceMap": true,
+        "removeComments": false,
+        "alwaysStrict": true,
+        "pretty": true,
+        "outDir": "dist",
+        "incremental": true,
+        "noEmitHelpers": true,
+        "importHelpers": true,
+        "skipLibCheck": true,
+        "esModuleInterop": true,
+        "resolveJsonModule": true,
+        "strictPropertyInitialization": true,
+    },
+    "include": [
+        "src/**/*"
+    ],
+    "exclude": [
+        "node_modules/**/*"
+    ]
 }
