--- a/package.json
+++ b/package.json
@@ -23,14 +23,12 @@
         "dotenv": "^16.3.1"
     },
     "devDependencies": {
+        "cpy-cli": "^5.0.0",
         "cross-env": "^7.0.3",
         "ts-node": "^10.9.2",
         "tslib": "^2.6.2",
         "typescript": "^5.3.3",
-        "@types/fuzzy-search": "^2.1.5",
         "@types/node": "^20.10.5",
-        "@types/ontime": "^0.0.3",
-        "@types/ws": "^8.5.10",
         "@typescript-eslint/eslint-plugin": "^6.15.0",
         "@typescript-eslint/parser": "^6.15.0",
         "eslint": "^8.56.0",
