--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@fnlb/locales",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "description": "FNLB Translation Service",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -9,7 +9,6 @@
         "translate": "node dist/translator",
         "lint": "eslint src/**/*.{ts,js}",
         "pretty": "npm prettier --write .",
-        "prebuild": "cpy ./src/locales/* ./dist/locales/ --flat",
         "prepare": "npm run build"
     },
     "files": [
@@ -19,19 +18,18 @@
     "author": "tnfAngel",
     "license": "ISC",
     "dependencies": {
-        "google-translate-api-x": "^10.6.7",
-        "dotenv": "^16.3.1"
+        "dotenv": "^16.3.1",
+        "google-translate-api-x": "^10.6.7"
     },
     "devDependencies": {
-        "cpy-cli": "^5.0.0",
-        "cross-env": "^7.0.3",
-        "ts-node": "^10.9.2",
-        "tslib": "^2.6.2",
-        "typescript": "^5.3.3",
         "@types/node": "^20.10.5",
         "@typescript-eslint/eslint-plugin": "^6.15.0",
         "@typescript-eslint/parser": "^6.15.0",
+        "cross-env": "^7.0.3",
         "eslint": "^8.56.0",
-        "prettier": "^3.1.1"
+        "prettier": "^3.1.1",
+        "ts-node": "^10.9.2",
+        "tslib": "^2.6.2",
+        "typescript": "^5.3.3"
     }
 }
