--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "types": "dist/index.d.ts",
     "scripts": {
         "build": "tsc --build --clean && tsc",
-        "translate": "npm run build && node dist/translator",
+        "translate": "pnpm run build && node dist/translator",
         "lint": "eslint src/**/*.{ts,js}",
-        "pretty": "npx prettier --write .",
-        "prepare": "npm run build"
+        "pretty": "pnpx prettier --write .",
+        "prepare": "pnpm run build"
     },
     "files": [
         "dist/**/*"
@@ -25,11 +25,10 @@
         "@types/node": "^20.10.5",
         "@typescript-eslint/eslint-plugin": "^6.15.0",
         "@typescript-eslint/parser": "^6.15.0",
-        "cross-env": "^7.0.3",
         "eslint": "^8.56.0",
         "prettier": "^3.1.1",
-        "ts-node": "^10.9.2",
         "tslib": "^2.6.2",
         "typescript": "^5.3.3"
-    }
+    },
+    "packageManager": "pnpm@8.14.1"
 }
