--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,23 +2,28 @@ name: CI
 
 on:
     pull_request:
-        branches: [stable]
+        branches: [main]
         types: [opened, synchronize]
+        paths-ignore:
+            - '*.md'
+            - '.*ignore'
+    push:
+        branches: [main]
+        paths-ignore:
+            - '*.md'
+            - '.*ignore'
+    workflow_dispatch:
+    
+concurrency:
+    group: '${{ github.workflow }}-${{ github.ref }}'
+    cancel-in-progress: true
 
 jobs:
-    avoid_redundancy_lint_pretty_and_cache_deps:
+    lint_pretty_and_cache_deps:
         runs-on: ubuntu-22.04
         permissions: write-all
         steps:
-            - name: Cancel Previous Redundant Builds
-              uses: styfle/cancel-workflow-action@0.11.0
-              with:
-                  access_token: ${{ github.token }}
-
             - uses: actions/checkout@v4
-              with:
-                  fetch-depth: 0
-                  ref: ${{ github.event.pull_request.head.ref }}
 
             - uses: pnpm/action-setup@v2
 
@@ -30,10 +35,6 @@ jobs:
             - name: Install dependencies
               run: pnpm install
 
-            - name: Lint
-              continue-on-error: true
-              run: pnpm run lint
-
             - name: Prettify code
               uses: creyD/prettier_action@v4.3
               with:
@@ -41,14 +42,13 @@ jobs:
                   prettier_options: . --write
 
     translate:
-        needs: [avoid_redundancy_lint_pretty_and_cache_deps]
+        needs: [lint_pretty_and_cache_deps]
         runs-on: ubuntu-22.04
         permissions:
           contents: write
+        if: ${{ github.event_name == 'push' }}
         steps:
             - uses: actions/checkout@v4
-              with:
-                  ref: ${{ github.event.pull_request.head.ref }}
 
             - uses: pnpm/action-setup@v2
 
@@ -61,9 +61,13 @@ jobs:
               run: pnpm install
               
             - name: Translate
-              run: pnpm run translate
+              run: pnpm run start
+
+            - name: Get last commit author
+              id: last-commit
+              run: echo "author=$(git log -1 --pretty=\"%an <%ae>\")" >> $GITHUB_OUTPUT
 
             - uses: stefanzweifel/git-auto-commit-action@v5
               with:
-                commit_message: Sync translations
-                commit_user_name: FNLB Translator
+                  commit_author: ${{ steps.last-commit.outputs.author }}
+                  commit_message: Sync translations
