--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
     "license": "ISC",
     "dependencies": {
         "dotenv": "^16.3.2",
-        "google-translate-api-x": "^10.6.8"
+        "google-translate-api-x": "^10.6.8",
+        "tslib": "^2.6.2",
+        "typescript": "^5.3.3"
     },
     "devDependencies": {
         "@types/node": "^20.11.5",
         "@typescript-eslint/eslint-plugin": "^6.19.0",
         "@typescript-eslint/parser": "^6.19.0",
         "eslint": "^8.56.0",
-        "prettier": "^3.2.4",
-        "tslib": "^2.6.2",
-        "typescript": "^5.3.3"
+        "prettier": "^3.2.4"
     },
     "packageManager": "pnpm@8.14.1"
 }
