--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "@fnlb-project/locales",
     "description": "FNLB Translation Service",
     "version": "1.1.0",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
+    "main": "src/index.ts",
+    "types": "src/index.ts",
     "type": "module",
     "scripts": {
         "build": "bun run build.ts",
