fix dist locales

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "types": "dist/index.d.ts",
     "type": "module",
     "scripts": {
-        "build": "bun run build.ts",
-        "prepublishOnly": "bun run build",
+        "build": "bun run src/build.ts",
+        "prepublishOnly": "bun run src/build",
         "lint": "bunx --bun @biomejs/biome check --apply .",
         "prepare": "bun run build"
     },
