--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,32 @@
 {
+	"$schema": "https://json.schemastore.org/tsconfig.json",
 	"compilerOptions": {
-		"strict": true,
-		"moduleResolution": "node",
-		"module": "commonjs",
-		"target": "es2019",
 		"lib": ["ESNext"],
-		"declaration": true,
-		"sourceMap": true,
-		"removeComments": false,
-		"alwaysStrict": true,
-		"pretty": true,
-		"outDir": "dist",
-		"incremental": true,
-		"noEmitHelpers": true,
-		"importHelpers": true,
-		"skipLibCheck": true,
-		"esModuleInterop": true,
+		"target": "ESNext",
+		"module": "ESNext",
+		"moduleDetection": "force",
+		"moduleResolution": "Bundler",
+		"allowJs": true,
+		"allowImportingTsExtensions": true,
+		"noEmit": true,
 		"resolveJsonModule": true,
-		"strictPropertyInitialization": true
+		"skipLibCheck": true,
+		"strict": true,
+		"allowUnreachableCode": false,
+		"allowUnusedLabels": false,
+		"exactOptionalPropertyTypes": false,
+		"forceConsistentCasingInFileNames": true,
+		"isolatedModules": true,
+		"noFallthroughCasesInSwitch": true,
+		"noImplicitOverride": true,
+		"noImplicitReturns": true,
+		"noPropertyAccessFromIndexSignature": true,
+		"noUncheckedIndexedAccess": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"verbatimModuleSyntax": true,
+		"types": []
 	},
-	"include": ["src/**/*", "src/**/*.json"],
-	"exclude": ["node_modules/**/*"]
+	"include": ["src/index.ts", "src/**/*", "src/**/*.json"],
+	"exclude": ["dist/", "node_modules/", "node_modules/**/*"]
 }
