--- a/biome.json
+++ b/biome.json
@@ -1,45 +1,41 @@
 {
-    "$schema": "https://biomejs.dev/schemas/1.5.3/schema.json",
-    "files": {
-        "ignoreUnknown": true
-    },
-    "formatter": {
-        "enabled": true,
-        "formatWithErrors": false,
-        "ignore": [
-            "**/node_modules/"
-        ],
-        "indentStyle": "tab",
-        "indentWidth": 4,
-        "lineEnding": "lf",
-        "lineWidth": 120
-    },
-    "javascript": {
-        "formatter": {
-            "arrowParentheses": "always",
-            "bracketSameLine": false,
-            "bracketSpacing": true,
-            "enabled": true,
-            "jsxQuoteStyle": "single",
-            "quoteProperties": "asNeeded",
-            "quoteStyle": "single",
-            "semicolons": "always",
-            "trailingComma": "none"
-        }
-    },
-    "json": {
-        "formatter": {
-            "enabled": true
-        }
-    },
-    "linter": {
-        "enabled": false,
-        "ignore": [
-            "**/node_modules/"
-        ],
-        "rules": {}
-    },
-    "organizeImports": {
-        "enabled": true
-    }
+	"$schema": "https://biomejs.dev/schemas/1.8.0/schema.json",
+	"files": {
+		"ignoreUnknown": true
+	},
+	"formatter": {
+		"enabled": true,
+		"formatWithErrors": false,
+		"ignore": ["**/node_modules/"],
+		"indentStyle": "tab",
+		"indentWidth": 4,
+		"lineEnding": "lf",
+		"lineWidth": 120
+	},
+	"javascript": {
+		"formatter": {
+			"arrowParentheses": "always",
+			"bracketSameLine": false,
+			"bracketSpacing": true,
+			"enabled": true,
+			"jsxQuoteStyle": "single",
+			"quoteProperties": "asNeeded",
+			"quoteStyle": "single",
+			"semicolons": "always",
+			"trailingCommas": "none"
+		}
+	},
+	"json": {
+		"formatter": {
+			"enabled": true
+		}
+	},
+	"linter": {
+		"enabled": false,
+		"ignore": ["**/node_modules/"],
+		"rules": {}
+	},
+	"organizeImports": {
+		"enabled": true
+	}
 }
