--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
 	"$schema": "https://json.schemastore.org/tsconfig.json",
 	"compilerOptions": {
-		"lib": ["ESNext"],
+		"lib": [
+			"ESNext",
+			"DOM"
+		],
 		"target": "ESNext",
 		"module": "ESNext",
 		"moduleDetection": "force",
@@ -27,6 +30,14 @@
 		"verbatimModuleSyntax": true,
 		"types": []
 	},
-	"include": ["src/index.ts", "src/**/*", "src/**/*.json"],
-	"exclude": ["dist/", "node_modules/", "node_modules/**/*"]
+	"include": [
+		"src/index.ts",
+		"src/**/*",
+		"src/**/*.json"
+	],
+	"exclude": [
+		"dist/",
+		"node_modules/",
+		"node_modules/**/*"
+	]
 }
