--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@fnlb-project/locales",
 	"description": "FNLB Locales & Translation Module",
-	"version": "2.0.4",
+	"version": "2.0.5",
 	"main": "src/index.ts",
 	"types": "src/index.ts",
 	"type": "module",
@@ -10,6 +10,7 @@
 		"translate": "bun run src/translator.ts",
 		"upload": "bun run src/upload.ts",
 		"prepublishOnly": "bun run src/build",
+		"lint": "bun run lint:biome && bun run lint:tsc",
 		"lint:biome": "bun biome check --write .",
 		"lint:tsc": "bun tsc --noEmit",
 		"test": "bun run test/index.ts"
