--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
 	"name": "@fnlb-project/locales",
 	"description": "FNLB Locales & Translation Module",
-	"version": "2.0.5",
+	"version": "2.0.6",
 	"main": "src/index.ts",
 	"types": "src/index.ts",
 	"type": "module",
+	"publishConfig": {
+		"access": "public"
+	},
 	"scripts": {
 		"build": "bun run src/build.ts",
 		"translate": "bun run src/translator.ts",
 		"upload": "bun run src/upload.ts",
-		"prepublishOnly": "bun run src/build",
+		"prepublishOnly": "bun run src/build.ts",
 		"lint": "bun run lint:biome && bun run lint:tsc",
 		"lint:biome": "bun biome check --write .",
 		"lint:tsc": "bun tsc --noEmit",
@@ -18,17 +21,16 @@
 	"files": ["dist"],
 	"author": "FNLB-Project",
 	"dependencies": {
-		"@fnlb-project/shared": "github:Fortnite-LobbyBot/Pragmatic#stable",
-		"ky": "^1.4.0",
-		"tslib": "^2.6.2"
+		"@fnlb-project/shared": "^1.3.2"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.8.3",
-		"@types/bun": "^1.0.8",
+		"@biomejs/biome": "^1.9.4",
+		"tslib": "^2.8.0",
+		"@types/bun": "^1.1.11",
 		"bun-plugin-dts": "^0.3.0",
-		"google-translate-api-x": "^10.6.8",
+		"google-translate-api-x": "^10.7.1",
 		"minio": "^8.0.1",
-		"typescript": "^5.3.3"
+		"typescript": "^5.6.3"
 	},
 	"packageManager": "bun@1.1.17"
 }
